# in-class-python-profiling

./: .gitignore  README.md  demo_profile.py  flake.nix  pyproject.toml
.devcontainer/: devcontainer.json
