[project]
name = "in-class-python-profiling"
version = "0.0.0"
classifiers = ["Private :: Do Not Upload"]
requires-python = ">=3.12"
dependencies = ["numpy>=2.2.5", "requests>=2.32.3", "torch>=2.6.0"]

[dependency-groups]
dev = [
    "gprof2dot>=2025.4.14",
    "py-spy>=0.4.0",
    "pyinstrument>=5.0.1",
    "scalene>=1.5.51",
]
